--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -32,7 +32,7 @@ spec:
         - name: {{ .Chart.Name }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+          image: ghcr.io/catenax-ng/product-value-added-service:main
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
