--- a/chart/templates/configmap.yaml
+++ b/chart/templates/configmap.yaml
@@ -1,9 +1,8 @@
+{{- if .Values.configmap.create -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: config-frontend
+  name: config-backend
 data:
-  config.json: |-
-    {
-      "serviceEnvironment": {{ .Values.service.environment | quote }}
-    }
+  {{- toYaml .Values.configmap.data | nindent 2 }}
+{{- end -}}
