add actuator with configmap

--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -34,6 +34,9 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: ghcr.io/catenax-ng/product-value-added-service:main
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          envFrom:
+            - configMapRef:
+                name: config-backend
           ports:
             - name: http
               containerPort: 8080
