--- a/chart/values-dev.yaml
+++ b/chart/values-dev.yaml
@@ -7,3 +7,14 @@ springProfiles:
 ingress:
   host: catenax-vas-dev.demo.catena-x.net
 
+postgresql:
+  enabled: true
+  nameOverride: postgresql
+  tls:
+    enabled: true
+    certificatesSecret: backstage-postgresql-certs
+    certFilename: tls.crt
+    certKeyFilename: tls.key
+  volumePermissions:
+    enabled: true
+  initdbScriptsSecret: backstage-postgresql-initdb
