--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -113,7 +113,7 @@ elastic:
       restEncryption: false
 
 postgres:
-  enabled: false
+  enabled: true
   auth:
     database: vas
     postgresPassword: <path:vas/data/dev/postgresql#postgres-password>
