--- a/chart/templates/postgresql/service.yaml
+++ b/chart/templates/postgresql/service.yaml
@@ -7,6 +7,6 @@ metadata:
 spec:
   type: ClusterIP
   ports:
-    - port: {{ .Values.service.port }}
+    - port: {{ .Values.postgres.service.port }}
   selector:
     {{- include "postgresql.selectorLabels" . | nindent 4 }}
