--- a/chart/templates/vas/configmap.yaml
+++ b/chart/templates/vas/configmap.yaml
@@ -4,5 +4,5 @@ kind: ConfigMap
 metadata:
   name: config-backend
 data:
-  {{- toYaml .Values.configmap.data | nindent 2 }}
+  {{- toYaml .Values.postgress.configmap.data | nindent 2 }}
 {{- end -}}
