--- a/chart/Chart.yaml
+++ b/chart/Chart.yaml
@@ -24,6 +24,11 @@ version: 2.0.0
 appVersion: "1.0.0"
 
 # Database dependency
-
+#dependencies:
+#  - name: postgresql
+#    condition: postgresql.enabled
+#    version: 1.0.0
+#    alias: postgres
+#    repository: file://chart/templates/postgresql
 
 
