--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -112,9 +112,8 @@ elastic:
     tls:
       restEncryption: false
 
-
 postgres:
-  enabled: false
+  enabled: true
   auth:
     database: vas
     postgresPassword: <path:vas/data/dev/postgresql#postgres-password>
