--- a/chart/Chart.yaml
+++ b/chart/Chart.yaml
@@ -24,6 +24,11 @@ version: 2.0.0
 appVersion: "1.0.0"
 
 dependencies:
+  - name: elasticsearch
+    version: 17.*.*
+    repository: https://charts.bitnami.com/bitnami
+    alias: elastic
+    condition: elastic.enabled
   - name: postgresql
     version:  11.*.*
     repository: https://charts.bitnami.com/bitnami
