--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -37,6 +37,18 @@ spec:
           envFrom:
             - configMapRef:
                 name: config-backend
+          env:
+            - name: SPRING_PROFILES_ACTIVE
+              value: { { .Values.springProfiles | join ","  }}
+            - name: VAS_DB_HOST
+              value: {{ include "includeWithPostgresContext" (list $ "postgresql.primary.fullname") } }
+            - name: VAS_DB_USER
+              value: { { .Values.postgres.auth.username } }
+            - name: VAS_DB_PASS
+              valueFrom:
+                secretKeyRef:
+                  name: { { include "includeWithPostgresContext" (list $ "postgresql.secretName") } }
+                  key: password
           ports:
             - name: http
               containerPort: 8080
