--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -39,9 +39,9 @@ spec:
                 name: config-backend
           env:
             - name: SPRING_PROFILES_ACTIVE
-              value: { { .Values.springProfiles }}
+              value: { { .Values.springProfiles | join ","  } }
             - name: VAS_DB_HOST
-              value: {{ include "includeWithPostgresContext" (list $ "postgresql.primary.fullname") } }
+              value: {{ include "includeWithPostgresContext" (list $ "postgresql.primary.fullname") }}
             - name: VAS_DB_USER
               value: { { .Values.postgres.auth.username } }
             - name: VAS_DB_PASS
