--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -40,9 +40,9 @@ spec:
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: {{ .Values.springProfiles | join ","  }}
-            - name: VAS_DB_HOST
+            - name: VAS_DATASOURCE_HOST
               value: {{ include "includeWithPostgresContext" (list $ "postgresql.primary.fullname") }}
-            - name: VAS_DB_USER
+            - name: VAS_DATASOURCE_USER
               value: {{ .Values.postgres.auth.username }}
             - name: VAS_DATASOURCE_PASS
               valueFrom:
