--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -40,13 +40,15 @@ spec:
           env:
             - name: APPLICATION_name
               value: {{ include "includeWithPostgresContext" (list $ "postgresql.primary.fullname") }}
+            - name: VAS_DATASOURCE_HOST
+              value: {{ include "includeWithPostgresContext" (list $ "postgresql.primary.fullname") }}
             - name: VAS_DATASOURCE_USER
               value: {{ .Values.postgres.auth.username }}
             - name: VAS_DATASOURCE_PASS
               valueFrom:
                 secretKeyRef:
                   name: {{ include "includeWithPostgresContext" (list $ "postgresql.secretName") }}
-                  key: password
+                  key: passwordasfdasdsad
           ports:
             - name: http
               containerPort: 8080
