--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -48,7 +48,7 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: {{ include "includeWithPostgresContext" (list $ "postgresql.secretName") }}
-                  key: passwordasfdasdsad
+                  key: password
           ports:
             - name: http
               containerPort: 8080
