--- a/chart/templates/ingress.yaml
+++ b/chart/templates/ingress.yaml
@@ -3,7 +3,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   # name of the ingress resource. -ingress suffix as suggestion for clear naming convention
-  name: {{ include "vas.fullname" . }}.ingress
+  name: {{ include "vas.fullname" . }}-ingress
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
