--- a/chart/templates/service.yaml
+++ b/chart/templates/service.yaml
@@ -8,5 +8,6 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
+      name: http
   selector:
     {{- include "vas.selectorLabels" . | nindent 4 }}
