--- a/chart/templates/ingress.yaml
+++ b/chart/templates/ingress.yaml
@@ -3,7 +3,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   # name of the ingress resource. -ingress suffix as suggestion for clear naming convention
-  name: {{ include "vas.fullname" . }}-ingress
+  name: {{ .Values.appName }}-ingress
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
@@ -11,12 +11,22 @@ metadata:
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
 spec:
   rules:
-  - host: {{ .Values.appName }}.{{ .Values.environment }}.demo.catena-x.net
-    http:
-      paths:
-      - backend:
-          serviceName: {{ include "vas.fullname" . }}
-          servicePortNumber: { .Values.service.port }}
-        path: /
+    # IMPORTANT: specifies the entrypoint (domain), myApp will be accessible from
+    - host: {{ .Values.appName }}.{{ .Values.environment }}.demo.catena-x.net
+      http:
+        paths:
+          # specific path the app should be reachable on the host
+          # complete URL for the app consists of host AND path
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                # Name of the service, the ingress controller should route the traffic to, if the host/path combination is called
+                # Adjust that to your service name
+                name: {{ include "vas.fullname" . }}
+                port:
+                  # Port number, the kubernetes service is listening on
+                  # Adjust that to your services' port
+                  number: {{ .Values.service.port }}
 
 {{- end }}
