--- a/chart/templates/service.yaml
+++ b/chart/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "vas.fullname" . }}
+  name: {{ include "vas.fullname" . }}-service
   labels:
     {{- include "vas.labels" . | nindent 4 }}
 spec:
