--- a/chart/templates/ingress.yaml
+++ b/chart/templates/ingress.yaml
@@ -23,10 +23,10 @@ spec:
               service:
                 # Name of the service, the ingress controller should route the traffic to, if the host/path combination is called
                 # Adjust that to your service name
-                name: project-value-added-service-postgres
+                name: {{ include "vas.fullname" . }}-service
                 port:
                   # Port number, the kubernetes service is listening on
                   # Adjust that to your services' port
-                  number: 5432
+                  number: {{ .Values.service.port }}
 
 {{- end }}
