--- a/chart/Chart.yaml
+++ b/chart/Chart.yaml
@@ -23,6 +23,11 @@ version: 2.0.0
 # It is recommended to use it with quotes.
 appVersion: "1.0.0"
 
-
+dependencies:
+  - name: postgresql
+    version:  11.*.*
+    repository: https://charts.bitnami.com/bitnami
+    alias: postgres
+    condition: postgres.enabled
 
 
